package edu.mum.cs.cs525.labs.lab6;

public interface Logger {
    void log(LogLevel logLevel, String message);
}
