@startuml
class Application{
    +main()
}
interface AccountService{
    +createAccount()
    +deposit()
    +withdrow()
    +transferFunds()
    +getAllAccounts()
    +getAccount()
}
class AccountDao{
    +saveAccount()
    +updateAccount()
    +loadAccount()
    +getAccounts()
}
class Account{
    +accountNumber
    +interestAdder
    +coulculateInterest
}

class AccountEntry {
    +date
    +amount
    +description
    +fromAccountNumber
    +fromPersonName
}

interface Logger {
    +Log();
}
class MyLogger
class LoggerAdapter
interface Logger4j
class My4jLogger
LoggerAdapter ..|> Logger
MyLogger ..|> Logger
LoggerAdapter --> My4jLogger
My4jLogger ..|> Logger4j
AccountService --> Logger
Application --> AccountService
AccountService --> AccountDao
AccountService ..> Account
Account --> Customer : belongs
Account *- AccountEntry: has *

@enduml